# tunnelo

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: README.md  bastion-wildcard.md  giao-dien.md  host-keys.md  hosts-file.md  ipc-events.md  kien-truc.md  local-router.md  platform-tray.md  profiles-store.md  secrets.md  ssh-tunnel.md
src/: App.css  App.tsx  api.ts  bastionHost.ts  types.ts  urlUtils.test.ts  urlUtils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bastion_resolve.rs  commands.rs  elevation.rs  host_keys.rs  hosts.rs  http_router.rs  lib.rs  local_router.rs  main.rs  model.rs  platform.rs  secrets.rs  sni_proxy.rs  sni_tls.rs  store.rs  tunnel.rs
src/components/: ConsolePanel.tsx  MappingRow.tsx  TunnelCard.tsx  TunnelForm.tsx
