[package]
name = "tunnelo"
version = "0.1.0"
description = "Tunnelo — SSH local port forward manager"
authors = ["Shi"]
edition = "2021"

[lib]
name = "tunnelo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
# Use the `ring` crypto backend instead of the default aws-lc-rs, which needs
# NASM to build on Windows. `ring` ships pre-generated assembly.
russh = { version = "0.54", default-features = false, features = ["flate2", "ring", "rsa"] }
uuid = { version = "1", features = ["v4", "serde"] }
keyring = { version = "3", features = ["windows-native"] }
anyhow = "1"
thiserror = "2"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
